<?xml version="1.0"?>
<package format="2">

  <name>system_model</name>

  <version>1.0.0</version>
  <description>A node that enables plugin-based implementation of a model for state estimation.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>kalman_filter</depend>
  <depend>system_model_msgs</depend>
  <doc_depend>doxygen</doc_depend>

</package>
